--- a/packages/scss/src/components/navside/mods.scss
+++ b/packages/scss/src/components/navside/mods.scss
@@ -26,6 +26,11 @@
 		display: none;
 	}
 
+	.navSide-item-link-badgesOptional {
+		flex-direction: column;
+		margin-left: inherit;
+	}
+
 	.numericBadge, .newBadge {
 		margin-left: inherit;
 	}
